1. Added loader support in BaseViewController 2. Added Location Support

--- a/Weather/Info.plist
+++ b/Weather/Info.plist
@@ -62,5 +62,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>It&apos;s required for current weather Info</string>
 </dict>
 </plist>
